Sunset: Improved title/nav on mobile: Title and byline now display above the image on narrow screens (when the sidebar jumps below the main content area), with a "View Description" jump link to make it more clear to mobile viewers that there's more to see.  Fixes #123.

--- a/static/css/_app_sunset.scss
+++ b/static/css/_app_sunset.scss
@@ -39,6 +39,17 @@
 }
 
 .left_content .left_full.photo_page {
+	&.title_in_sidebar #page_title {
+		display: none;
+		@media #{$scr_mobile} { display: block; }
+	}
+	
+	#page_title .mobile_jump_link {
+		display: none;
+		font-weight: bold;
+		@media #{$scr_mobile} { display: inline; }
+	}
+
 	.page_body_text { font-size: 0.9em; }
 	
 	.photo_image {
